[package]
name = "hacking-stm32f411"
version = "0.1.0"
edition = "2021"

[dependencies]
systick-monotonic = "1.0.0"
cortex-m-rtic = "1.1.3"
lcd = "0.4.1"
const_format = "0.2.26"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rt", "rtic-monotonic"]


